# llm-as-a-judge-consistency

./: .gitignore  Blog.md  Makefile  README.md  pyproject.toml
assets/data/: calibration_table_sms_spam.csv  confidence_when_wrong_sms_spam.csv  ece_mce_metrics_sms_spam.csv
src/: logger.py  main.py
src/config/: base_models.py  constants.py
src/experiment/: analysis.py  classifier.py  confidence.py
tests/: test_judge.py
yaml/experiments/: confidence_format_study.yaml  model_comparison.yaml  quick_test.yaml  sms_spam_full.yaml  sst2_full.yaml
